--- a/home.html
+++ b/home.html
@@ -50,18 +50,70 @@
 
 
 <!-- SECTION 2 -->
-<section id = "section2" style="height: 500px;">
-    <div style="width: 50%; height: 500px; float: left; text-align: center;">
+<section id = "section2" style="height: 600px;">
+    <div style="width: 50%; height: 500px; float: left; text-align: center; padding-top: 100px;">
         <h3 style="font-size: 40px; font-weight: 400; "> Best Dog Subscription <br> box in canada </h3>
         <p style="font-size: 24px; font-weight: 400; "> All Canadian & totally customized box of <br> themed toys and treats for your pup - <br> delivered every month</p>
-        <span><button style="color: white; background-color: #B52222; padding: 12px 50px 12px 50px; border-radius: 20px; border: 0px;">Get A Crate</button></span><span style="margin: 0px 20px 0px 20px;">OR</span><span><button style="color: white; background-color: #B52222; padding: 12px 50px 12px 50px; border-radius: 20px; border: 0px;">Get A Crate</button></span>
+        <span><button style="color: white; background-color: #B52222; padding: 12px 50px 12px 50px; border-radius: 20px; border: 0px;">Get A Crate</button></span><span style="margin: 0px 20px 0px 20px;">OR</span><span><button style="color: white; background-color: black; padding: 12px 60px 12px 60px; border-radius: 20px; border: 0px;">Gift</button></span>
     </div>
     <div style="width: 50%; background-color: white; height: 500px; float: right; text-align: center; ">
         <img src="images/banner-img.png" width="450px">
     </div>
-
 </section>
 
-	
+
+<!-- SECTION 3 -->
+<section id = "section3" style="height: 650px; background-color: #FAFAFA;">
+    <div style="width: 100%; height: 500px;  text-align: center; padding-top: 70px;">
+        <p style="font-size: 18px; font-weight: 400; margin: 0px; padding: 0px; height: 30px; "> New Themes Every Month</p>
+        <h3 style="font-size: 40px; font-weight: 400; margin: 0px; padding: 0px; height: 70px;">What’s Inside? </h3>
+       <div style="margin-top: 20px; height: 50px;"> <span style="color: black; font-size: 22px; font-weight: 400;">Arcade</span><span style="margin: 0px 20px 0px 20px;"></span><span style="color: black; font-size: 32px; font-weight: 400;">Hawaii Luau</span><span style="margin: 0px 20px 0px 20px;"></span><span style="color: black; font-size: 22px; font-weight: 400;">A Trip to paris</span></div>
+       <div style="margin-top: 50px; height: 250px;">
+       <div style="width: 16%; float: left;"> <img src="images/product-img.png"><p style="font-size: 2s0px; font-weight: 400;">Lenny The Pineapple</p></div>
+       <div style="width: 16%; float: left;"> <img src="images/product-img.png"><p style="font-size: 2s0px; font-weight: 400;">Lenny The Pineapple</p></div>
+       <div style="width: 16%; float: left;"> <img src="images/product-img.png"><p style="font-size: 2s0px; font-weight: 400;">Lenny The Pineapple</p></div>
+       <div style="width: 16%; float: left;"> <img src="images/product-img.png"><p style="font-size: 2s0px; font-weight: 400;">Lenny The Pineapple</p></div>
+       <div style="width: 16%; float: left;"> <img src="images/product-img.png"><p style="font-size: 2s0px; font-weight: 400;">Lenny The Pineapple</p></div>
+       <div style="width: 16%; float: left;"> <img src="images/product-img.png"><p style="font-size: 2s0px; font-weight: 400;">Lenny The Pineapple</p></div>
+       </div>
+       <div style="padding-top: 20px;" id="sec3"><button style="color: white; background-color: #B52222; padding: 12px 100px 12px 100px; border-radius: 0px; border: 0px;">Customize Your Crate</button></div>
+    </div>
+</section>
+
+<!-- SECTION 4 -->
+<section id = "section4" style="height: 300px; background-color: white;">
+    <div style="width: 20%; height: 300px; float: left;"></div>
+    <div style="width: 60%; height: 300px; float: left; text-align: center; padding-top: 50px; background-color: #FFB800; border-radius: 20px;"> 
+        <h3 style="font-size: 40px; font-weight: 400; margin: 0px; padding: 0px; height: 70px;">WHAT TO EXPECT</h3>
+        <div style="margin-top: 20px; height: 50px;"> <span style="color: black; font-size: 22px; font-weight: 400;">Dukes Crate</span><span style="margin: 0px 20px 0px 20px;"></span><span style="color: black; font-size: 40px; font-weight: 400;"><button style="font-size: 30px; color: white; background-color: black; padding: 12px 10px 12px 10px; border-radius: 20px; border: 0px;">Themed Crate</button></span><span style="margin: 0px 20px 0px 20px;"></span><span style="color: black; font-size: 22px; font-weight: 400;">Treat Enthusiast</span></div>
+        <p style="font-size: 18px; font-weight: 400; margin-top: 30px; padding: 0px; height: 30px; ">Select from one of the 3 dog subscription<br> boxes above to learn more about each.</p>
+    </div>
+    <div style="width: 20%; height: 300px; float: left;"></div>
+</section>
+
+<!-- SECTION 5 -->
+<section id = "section5" style="height: 900px; background-color: white;">    
+    <div style="width: 60%; height: 890px; float: left; text-align: center;"> 
+        <img src="images/sec4.png">
+        <img src="images/sec4-1.png">
+    </div>
+    <div style="width: 40%; height: 890px; float: left;  padding-top: 100px;"> 
+        <img src="images/sec4-2.png">
+      <p style="padding-left: 50px;">  <button style="color: white; background-color: #B52222; padding: 12px 100px 12px 100px; border-radius: 0px; border: 0px;">Customize Your Crate</button></p>
+    </div>    
+</section>
+
+<!-- SECTION 6 -->
+<section id = "section6" style="height: 600px; background-color: #FFB800;">
+    <div style="width: 30%; height: 600px; float: left; text-align: center;"> <img src="images/sec6.png"></div>
+    <div style="width: 40%; height: 600px; float: left; text-align: center; padding-top: 50px; border-radius: 20px;"> 
+        <h3 style="font-size: 40px; font-weight: 400; margin: 0px; padding: 0px; height: 70px;">OUR PACK</h3>
+        <div style="margin-top: 0px; height: 50px;"><span style="color: black; font-size: 40px; font-weight: 400;"><button style="font-size: 30px; color: white; background-color: black; padding: 12px 30px 12px 30px; border-radius: 20px; border: 0px;">HAS YOUR TAIL</button></span></div>
+        <p style="font-size: 18px; font-weight: 400; margin-top: 30px; padding: 0px; height: 30px; ">Have any questions about our dog<br> subscription box? We’d love to lend a<br> paw. We’re always here for you!</p>
+    </div>
+    <div style="width: 30%; height: 600px; float: left; text-align: center;"></div>
+        
+</section>
+
 </body>
 </html>
